# minishell

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
includes/: error_messages.h  minishell.h
libft/: Makefile  libft.h
libft/srcs/: ft_strncmp.c  ft_strtrim.c  get_next_line_utils.c
sources/: command_utils.c  env_list.c  exec.c  libft.c  main.c  minishell_utils.c  pipes.c  pipes_utils.c  process_env.c  process_message.c  prompt.c  quotes_utils.c  read_command_line.c  save_split_args.c  signals.c  split_arguments.c  test.c
sources/environment/: env_array.c  env_list.c  process_env.c
sources/execution/: exec.c  exec_child.c  exec_redirections.c  exec_redirections_utils.c  heredoc_redirection.c  in_out_redirection.c  pipes.c
sources/execution/builtins/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_export_child.c  ft_pwd.c  ft_unset.c
sources/parsing/: command_utils.c  dollars.c  dollars_size.c  process_message.c  quotes_utils.c  redirections_checks.c  split_arguments.c
